--- a/WebContent/assets/css/ride.css
+++ b/WebContent/assets/css/ride.css
@@ -1,1 +1,49 @@
-@CHARSET "UTF-8";
+#map {
+        width: 100%;
+        height: 550px;
+        margin: 0px;
+     }
+
+.controls {
+  border: 1px solid transparent;
+  border-radius: 2px 0 0 2px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  height: 32px;
+  outline: none;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+}
+
+#pac-input {
+  background-color: #fff;
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 300;
+  margin-left: 12px;
+  padding: 0 11px 0 13px;
+  text-overflow: ellipsis;
+  width: 60%;
+}
+
+#pac-input:focus {
+  border-color: #4d90fe;
+}
+
+.pac-container {
+  font-family: Roboto;
+}
+
+#type-selector {
+  color: #fff;
+  background-color: #4d90fe;
+  padding: 5px 11px 0px 11px;
+  width: 40%;
+  height: 3rem;
+}
+
+#type-selector label {
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 300;
+  color: #fff;
+}
